# crate2d

./: Cargo.toml  LICENSE-MIT  README.md
examples/: collision_detection.rs  collision_response.rs  dynamics.rs
src/: collider_2d.rs  force.rs  lib.rs  pipeline.rs  rigid_body.rs  world.rs
src/algo/: line_2d.rs  mod.rs  point.rs
src/collision/: algo.rs  algo_2d.rs  collider.rs  collider_set.rs  mod.rs
src/collision/algo/: line_2d.rs  mod.rs  ray_2d.rs
src/dynamics/: collision.rs  mod.rs  rigid_body.rs  rigid_body_set.rs
src/force/: force_set.rs  gravity.rs  mod.rs  registry.rs
src/geometry/: circle.rs  ray_2d.rs
src/math/: circle.rs  line_2d.rs  mod.rs  transform.rs  vec2_ex.rs  vec2_ext.rs
src/math/algo/: mod.rs  point.rs
src/primitive/: circle.rs  line_2d.rs  mod.rs  ray_2d.rs  rect.rs
src/rigid_body/: mod.rs  rigid_body_2d.rs
