[package]
name = "crate2d"
version = "0.1.0"
edition = "2021"
authors = ["Drumstickz64 gearman533@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
generational-arena = "0.2.8"
glam = { version = "0.22.0", features = ["approx", "debug-glam-assert"] }

[dev-dependencies]
macroquad = { version = "0.3.25", default-features = false }
